# sandpolis

./: .gitignore  .gitmodules  .release-plz.toml  .travis.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  Vagrantfile  appveyor.yml  build.gradle  build.gradle.kts  gradle.properties  remote.gradle  settings.gradle  settings.gradle.kts  shell.nix
.cargo/: config.toml
sandpolis-account/: CHANGELOG.md  Cargo.toml  README.md  build.rs
sandpolis-account/src/: config.rs  lib.rs
sandpolis-agent/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-agent/examples/: client_tui.rs
sandpolis-agent/src/: bootagent.rs  cli.rs  config.rs  lib.rs  messages.rs  uefi.rs  uninstall.rs  update.rs
sandpolis-agent/src/agent/: main.rs  mod.rs  routes.rs
sandpolis-agent/src/wake/: mod.rs  streams.rs
sandpolis-audit/: Cargo.toml  README.md
sandpolis-audit/src/: lib.rs
sandpolis-bootagent/: CHANGELOG.md  Cargo.toml  README.md  run_aarch64.sh  run_x86_64.sh  rust-toolchain.toml
sandpolis-bootagent/src/: main.rs  network.rs
sandpolis-bootagent/src/agent/: messages.rs
sandpolis-bootagent/src/bootagent/: build.gradle.kts  main.rs  main_ui.rs  network.rs  snapshot_utils.rs
sandpolis-client/: CHANGELOG.md  Cargo.toml
sandpolis-client-mobile/: Cargo.toml
sandpolis-client-mobile/src/: lib.rs
sandpolis-client/examples/: resident_vec.rs
sandpolis-client/src/: cli.rs  config.rs  lib.rs  sync.rs
sandpolis-client/src/gui/: about.rs  activity.rs  add_agent.rs  assets.rs  components.rs  controller.rs  database_browser.rs  drag.rs  edges.rs  input.rs  instance_layer.rs  layer_ext.rs  layer_picker.rs  layer_switcher.rs  layer_toolbar.rs  layer_ui.rs  layer_visuals.rs  layout.rs  listeners.rs  login.rs  minimap.rs  mod.rs  node.rs  node_picker.rs  preview.rs  queries.rs  responsive.rs  theme.rs
sandpolis-client/src/tui/: help.rs  loading.rs  mod.rs  resident_vec.rs
sandpolis-core/: Cargo.toml  README.md
sandpolis-core/src/: lib.rs
sandpolis-database/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-database/benches/: database_bench.rs
sandpolis-database/src/: cli.rs  config.rs  lib.rs  oid.rs
sandpolis-deploy/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-deploy/src/: agent.rs  lib.rs  messages.rs  mod.rs
sandpolis-deploy/src/ssh/: server.rs
sandpolis-desktop/: CHANGELOG.md  Cargo.toml  build.rs
sandpolis-desktop/src/: agent.rs  cli.rs  lib.rs  messages.rs  screenshot.rs  session.rs
sandpolis-desktop/src/agent/: JavaDesktopSource.java  mod.rs
sandpolis-desktop/src/capture/: config.rs  mod.rs
sandpolis-desktop/src/client/: gui.rs  mod.rs  tui.rs
sandpolis-desktop/src/input/: dsl.rs  libxdo_sys.rs  mod.rs
sandpolis-desktop/src/platform/: linux.rs  mod.rs
sandpolis-filesystem/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-filesystem/examples/: client_tui.rs
sandpolis-filesystem/src/: agent.rs  lib.rs  messages.rs  session.rs
sandpolis-filesystem/src/agent/: mod.rs  routes.rs
sandpolis-filesystem/src/client/: fuse.rs  gui.rs  mod.rs  tui.rs
sandpolis-group/: CHANGELOG.md  Cargo.toml
sandpolis-group/src/: cli.rs  config.rs  lib.rs  messages.rs  server.rs
sandpolis-health/: Cargo.toml
sandpolis-health/src/: lib.rs
sandpolis-health/src/client/: gui.rs  mod.rs  tui.rs
sandpolis-health/src/systemd/: agent.rs  mod.rs
sandpolis-instance/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-instance/benches/: database_bench.rs
sandpolis-instance/src/: cli.rs  config.rs  format.rs  lib.rs
sandpolis-instance/src/database/: browse.rs  cli.rs  config.rs  mod.rs  sync.rs
sandpolis-instance/src/network/: cli.rs  client.rs  config.rs  messages.rs  mod.rs  ping.rs  server.rs  stream.rs  sync.rs
sandpolis-instance/src/realm/: cli.rs  config.rs  mod.rs  server.rs
sandpolis-inventory/: Cargo.toml
sandpolis-inventory/src/: agent.rs  lib.rs
sandpolis-inventory/src/applications/: firefox.rs  mod.rs
sandpolis-inventory/src/client/: gui.rs  mod.rs
sandpolis-inventory/src/hardware/: battery.rs  cpu.rs  display.rs  firmware.rs  mainboard.rs  memory.rs  mod.rs  network.rs  sensor.rs  sound.rs  usb.rs
sandpolis-inventory/src/os/: block_device.rs  group.rs  mod.rs  mountpoint.rs
sandpolis-inventory/src/package/: mod.rs
sandpolis-location/: CHANGELOG.md  Cargo.toml
sandpolis-location/src/: cli.rs  config.rs  lib.rs  server.rs
sandpolis-location/src/server/: ip_api.rs  key_cdn.rs  mod.rs
sandpolis-mobile/: Cargo.toml  shell.nix
sandpolis-mobile/android/: local.properties  settings.gradle
sandpolis-mobile/src/: lib.rs  main.rs
sandpolis-network/: CHANGELOG.md  Cargo.toml
sandpolis-network/src/: cli.rs  config.rs  lib.rs  messages.rs  ping.rs  routes.rs  server.rs  stream.rs
sandpolis-package/: CHANGELOG.md  Cargo.toml
sandpolis-package/src/: agent.rs  lib.rs
sandpolis-power/: CHANGELOG.md  Cargo.toml
sandpolis-power/examples/: client_tui.rs
sandpolis-power/src/: agent.rs  lib.rs  messages.rs
sandpolis-probe/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-probe/src/: cli.rs  config.rs  ipmi.rs  lib.rs  management.rs  mod.rs  rtsp.rs  snmp.rs  ups.rs  wol.rs
sandpolis-realm/: Cargo.toml  README.md
sandpolis-realm/src/: cli.rs  config.rs  lib.rs  messages.rs  server.rs
sandpolis-server/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-server/src/: banner.rs  block.rs  cli.rs  config.rs  lib.rs  messages.rs
sandpolis-shell/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-shell/src/: agent.rs  cli.rs  execute.rs  lib.rs  messages.rs  session.rs  shell.rs
sandpolis-snapshot/: CHANGELOG.md  Cargo.toml  README.md
sandpolis-snapshot/src/: agent.rs  bootagent.rs  cli.rs  config.rs  lib.rs  messages.rs  server.rs
sandpolis-sysinfo/: CHANGELOG.md  Cargo.toml
sandpolis-sysinfo/src/: agent.rs  lib.rs
sandpolis-tunnel/: CHANGELOG.md  Cargo.toml
sandpolis-tunnel/src/: lib.rs
sandpolis-user/: CHANGELOG.md  Cargo.toml
sandpolis-user/src/: client.rs  lib.rs  messages.rs  server.rs
sandpolis-wake/: Cargo.toml
sandpolis-wake/examples/: client_tui.rs
sandpolis-wake/src/: lib.rs  messages.rs  streams.rs
(+3304 files in other folders)
