[profile.release]
strip = true

[workspace]
resolver = "2"
members = [
  "sandpolis",
  "sandpolis-account",
  "sandpolis-agent",
  "sandpolis-alert",
  "sandpolis-bootagent",
  "sandpolis-client",
  "sandpolis-database",
  "sandpolis-deploy",
  "sandpolis-desktop",
  "sandpolis-filesystem",
  "sandpolis-group",
  "sandpolis-instance",
  "sandpolis-location",
  "sandpolis-logs",
  "sandpolis-macros",
  "sandpolis-mobile",
  "sandpolis-network",
  "sandpolis-package",
  "sandpolis-probe",
  "sandpolis-server",
  "sandpolis-shell",
  "sandpolis-snapshot",
  "sandpolis-sysinfo",
  "sandpolis-tunnel",
  "sandpolis-user",
]

[workspace.dependencies]
anyhow = { version = "1.0.76", default-features = false }
pem = { version = "3.0.4", default-features = false }
rand = { version = "0.8.5", default-features = false }
regex = { version = "1.11.1", default-features = false }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
tracing = "0.1.40"
url = { version = "2.5.4", default-features = false, features = ["serde"] }
uuid = { version = "1.10.0", default-features = false, features = [
  "v7",
  "serde",
] }
validator = { version = "0.19", features = ["derive"] }
