[profile.release]
strip = true

[workspace]
resolver = "2"
members = [
  "sandpolis",
  "sandpolis-account",
  "sandpolis-agent",
  "sandpolis-alert",
  "sandpolis-bootagent",
  "sandpolis-client",
  "sandpolis-database",
  "sandpolis-deploy",
  "sandpolis-desktop",
  "sandpolis-filesystem",
  "sandpolis-group",
  "sandpolis-instance",
  "sandpolis-location",
  "sandpolis-logs",
  "sandpolis-macros",
  "sandpolis-mobile",
  "sandpolis-network",
  "sandpolis-package",
  "sandpolis-power",
  "sandpolis-probe",
  "sandpolis-server",
  "sandpolis-shell",
  "sandpolis-snapshot",
  "sandpolis-sysinfo",
  "sandpolis-tunnel",
  "sandpolis-user",
]

[workspace.dependencies]
anyhow = "1.0.76"
aws-lc-rs = "1.12.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-macros = "0.5.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum = { version = "0.8.0", features = ["ws", "json"] }
base64 = "0.22.1"
cached = "0.54.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive", "string"] }
colored = "3.0.0"
futures = "0.3.30"
futures-util = "0.3.31"
os_info = "3.8.2"
pem = "3.0.4"
rand = "0.8.5"
regex = "1.11.1"
ring = "0.17.8"
russh = { version = "0.50.0" }
rustls = "0.23.21"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = "1.0.134"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["chrono"] }
strum = { version = "0.27.0", features = ["derive"] }
tempfile = "3.17.0"
time = { version = "0.3.37" }
tokio-rustls = "0.26.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tracing = "0.1.40"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.12.0", features = ["v7", "serde"] }
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = [
  "stream",
  "cookies",
  "json",
  "rustls-tls",
  "charset",
] }
reqwest-websocket = "0.4.4"
ratatui = { version = "0.29.0", features = ["unstable"] }
