[profile.release]
strip = true

[workspace]
resolver = "2"
members = [
  "sandpolis",
  "sandpolis-account",
  "sandpolis-agent",
  "sandpolis-audit",
  "sandpolis-client",
  "sandpolis-core",
  "sandpolis-database",
  "sandpolis-deploy",
  "sandpolis-desktop",
  "sandpolis-filesystem",
  "sandpolis-instance",
  "sandpolis-inventory",
  "sandpolis-macros",
  "sandpolis-mobile",
  "sandpolis-network",
  "sandpolis-power",
  "sandpolis-probe",
  "sandpolis-realm",
  "sandpolis-server",
  "sandpolis-shell",
  "sandpolis-snapshot",
  "sandpolis-tunnel",
  "sandpolis-user",
]

[workspace.dependencies]
anyhow = "1.0.100"
aws-lc-rs = "1.12.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-macros = "0.5.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum = { version = "0.8.8", features = ["ws", "json"] }
base64 = "0.22.1"
cached = "0.54.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive", "string"] }
colored = "3.0.0"
cron = { version = "0.15.0", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.31"
headers = "0.4.1"
image = "0.25.5"
native_db = { git = "https://github.com/vincent-herlemont/native_db", features = [
  "tokio",
] }
native_model = "0.6.1"
os_info = "3.8.2"
passwords = { version = "3.1.16" }
pem = "3.0.4"
png = "0.17.16"
rand = "0.9.0"
regex = "1.11.1"
russh = { version = "0.52.0" }
rustls = { version = "0.23.36", default-features = false }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = "1.0.134"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["chrono"] }
strum = { version = "0.27.0", features = ["derive"] }
tempfile = "3.17.0"
time = { version = "0.3.37" }
tokio-rustls = "0.26.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.15.1", features = ["v7", "serde", "rng-getrandom"] }
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = [
  "stream",
  "cookies",
  "json",
  "rustls-tls",
  "charset",
] }
reqwest-websocket = "0.5.0"

# Terminal client exclusive
ratatui = { version = "0.30.0", features = ["unstable"] }
ratatui-image = { version = "8.0.1" }
tui-popup = { version = "0.6.0" }

# GUI client exclusive
bevy = { version = "0.17.3" }
bevy_svg = { version = "0.17.1", features = ["2d"] }
bevy_rapier2d = { version = "0.32.0" }
