[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-account"
version = "0.0.1"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono", "semver"] }

[dependencies]
anyhow = { workspace = true }
validator = { workspace = true }
serde = { workspace = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }

[features]
client = []
server = []
agent = []
