[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-account"
version = "0.0.1"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono", "semver"] }

[dependencies]
anyhow = { workspace = true }
validator = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
serde = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[features]
client = []
server = []
agent = []
