[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-agent"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
clap = { workspace = true }
tokio-cron-scheduler = { version = "0.14.0", optional = true }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[features]
agent = ["dep:tokio-cron-scheduler"]
