[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-agent"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
clap = { workspace = true }
tokio-cron-scheduler = { version = "0.14.0", optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[features]
agent = ["dep:tokio-cron-scheduler"]
