[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-agent"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { version = "0.15.1", optional = true }
inventory = { workspace = true, optional = true }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

# Terminal (TUI/CLI) dependencies, excluded on Android
[target.'cfg(not(target_os = "android"))'.dependencies]
ratatui = { workspace = true, optional = true }

[dev-dependencies]
native_db = { workspace = true }
native_model = { workspace = true }

[features]
agent = ["dep:tokio-cron-scheduler", "dep:inventory"]
client = ["sandpolis-instance/client", "dep:ratatui", "dep:sandpolis-client", "sandpolis-client/client"]
server = []

[[example]]
name = "client_tui"
required-features = ["client"]
