[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-audit"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
linux-audit-parser = "0.2.7"
native_db = { workspace = true }
native_model = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }

[features]
server = []
agent = []
client = []
