[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-audit"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
linux-audit-parser = "0.2.7"
native_db = { workspace = true }
native_model = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[features]
server = []
agent = []
client = []
