[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-bootagent"
version = "0.0.1"

[dependencies]
uefi = { version = "0.35.0", features = [ #"panic_handler"
], optional = true }
getrandom = { version = "0.3.1" }
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-32768",
  "arch-spin",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-net = { version = "0.6.0", features = [
  "defmt",
  "tcp",
  "dhcpv4",
  "medium-ethernet",
  "proto-ipv4",
  "proto-ipv6",
  "dns",
] }
sandpolis-snapshot = { path = "../sandpolis-snapshot", version = "0.0.1" }
