[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-bootagent"
version = "0.0.1"

[dependencies]
uefi = { workspace = true }
getrandom = { version = "0.3.1" }
rustls = { workspace = true, features = ["ring", "tls12"] }
ring = { workspace = true }
serde = { workspace = true }
sandpolis-snapshot = { path = "../sandpolis-snapshot", version = "0.0.1", default-features = false }
sandpolis-realm = { path = "../sandpolis-realm", version = "0.0.1", default-features = false }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1", default-features = false }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1", default-features = false, features = [
  "bootagent",
] }
