[package]
name = "sandpolis-client-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "sandpolis_client_mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.56"
log = "0.4.11"
wry = "0.35.0"
dioxus = { version = "0.5.1", features = ["mobile"]}
sandpolis = { path = "../sandpolis", features = ["client"]}

[package.metadata.android]
package = "org.fossable.sandpolis"
apk_name = "Sandpolis"
# assets = "../../assets"
# resources = "../../assets/android-res"
strip = "strip"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Sandpolis"
