[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-client"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
passwords = { workspace = true, optional = true, features = [
  "common-password",
] }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-database = { path = "../sandpolis-database", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-network = { path = "../sandpolis-network", version = "0.0.1", optional = true }
sandpolis-server = { path = "../sandpolis-server", version = "0.0.1", optional = true }
sandpolis-user = { path = "../sandpolis-user", version = "0.0.1", optional = true }
native_db = { workspace = true, optional = true }
native_model = { workspace = true, optional = true }

# GUI dependencies
bevy = { workspace = true, optional = true }
bevy_svg = { workspace = true, optional = true, features = ["2d"] }
bevy_rapier2d = { workspace = true, optional = true }
bevy_egui = { workspace = true, optional = true }
bevy_stl = { workspace = true, optional = true }
egui-file-dialog = { workspace = true, optional = true }
egui_console = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
inventory = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true, optional = true }

# TUI dependencies
ratatui = { workspace = true, optional = true }
color-eyre = { version = "0.6.3", optional = true }
crossterm = { version = "0.28.1", optional = true, features = ["event-stream"] }
tui-popup = { workspace = true, optional = true }

[features]
client = ["dep:passwords"]
client-gui = [
  "client",
  "dep:bevy",
  "dep:bevy_svg",
  "dep:bevy_rapier2d",
  "dep:bevy_egui",
  "dep:bevy_stl",
  "dep:egui-file-dialog",
  "dep:egui_console",
  "dep:egui_extras",
  "dep:rand",
  "dep:sandpolis-network",
  "dep:sandpolis-server",
  "dep:sandpolis-user",
  "sandpolis-core/client-gui",
  "sandpolis-instance/client-gui",
  "sandpolis-network/client-gui",
  "sandpolis-server/client-gui",
  "sandpolis-user/client",
]
client-tui = [
  "client",
  "dep:ratatui",
  "dep:color-eyre",
  "dep:crossterm",
  "dep:tui-popup",
  "dep:native_db",
  "dep:native_model",
]

[[example]]
name = "resident_vec"
required-features = ["client-tui"]
