[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-client"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
passwords = { workspace = true, optional = true, features = [
  "common-password",
] }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-server = { path = "../sandpolis-server", version = "0.0.1", optional = true }
native_db = { workspace = true, optional = true }
native_model = { workspace = true, optional = true }

# GUI dependencies
bevy = { workspace = true, optional = true }
bevy_svg = { workspace = true, optional = true, features = ["2d"] }
bevy_rapier2d = { workspace = true, optional = true }
bevy_stl = { workspace = true, optional = true }
bevy_ui_widgets = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }
include_dir = { workspace = true, optional = true }
tracing = { workspace = true }
rand = { workspace = true, optional = true }

# Terminal (TUI/CLI) dependencies, excluded on Android
[target.'cfg(not(target_os = "android"))'.dependencies]
ratatui = { workspace = true, optional = true }
color-eyre = { version = "0.6.3", optional = true }
crossterm = { version = "0.29.0", optional = true, features = ["event-stream"] }
tui-popup = { workspace = true, optional = true }

[features]
client = [
  "dep:passwords",
  "dep:bevy",
  "dep:bevy_svg",
  "dep:bevy_rapier2d",
  "dep:bevy_stl",
  "dep:bevy_ui_widgets",
  "dep:resvg",
  "dep:include_dir",
  "dep:rand",
  "dep:sandpolis-server",
  "sandpolis-instance/client",
  "sandpolis-server/client",
  "dep:ratatui",
  "dep:color-eyre",
  "dep:crossterm",
  "dep:tui-popup",
  "dep:native_db",
  "dep:native_model",
  "dep:serde_json",
]

[[example]]
name = "resident_vec"
required-features = ["client"]
