[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-core"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true, optional = true }
clap = { workspace = true }
colored = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[features]
server = []
agent = []
client = []
client-gui = ["client", "dep:bevy"]
