[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-core"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
headers = { workspace = true, optional = true }
native_db = { workspace = true }
native_model = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[features]
default = ["dep:clap", "dep:colored"]
server = ["dep:headers"]
bootagent = []
agent = []
client = []
client-gui = ["client", "dep:bevy"]
