[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-database"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_cbor = { workspace = true }
serde = { workspace = true }
sled = { version = "0.34.7" }
tracing = { workspace = true }
tempfile = { workspace = true }
