[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-database"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
serde_cbor = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
