[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-database"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
rand = { workspace = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
serde_cbor = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }

[features]
agent = ["sandpolis-core/agent"]
client = ["sandpolis-core/client"]
server = ["sandpolis-core/server"]
