[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-deploy"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
os_info = { workspace = true }
russh = { workspace = true, optional = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-group = { path = "../sandpolis-group", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[features]
agent = ["dep:russh"]
