[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-deploy"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
os_info = { workspace = true }
russh = { workspace = true, optional = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }

[features]
agent = ["dep:russh"]
