[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "AGPL-3.0-only"
name = "sandpolis-desktop"
version = "0.0.1"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
# TODO needs to be published
# scrap = { git = "https://github.com/rustdesk/rustdesk", optional = true, features = [
#   "linux-pkg-config",
# ] }
enigo = { version = "0.3.0", optional = true }
ratatui = { workspace = true, optional = true }
ratatui-image = { workspace = true, optional = true }
image = { workspace = true, optional = true }
bevy = { workspace = true, optional = true }
tracing = { workspace = true }
sandpolis-core = { path = "../sandpolis-core", version = "0.0.1" }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }

[features]
agent = ["dep:enigo"]
client = []
client-gui = ["client", "dep:bevy"]
client-tui = ["client", "dep:ratatui", "dep:ratatui-image", "dep:image", "dep:sandpolis-client"]
server = []
