[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-desktop"
version = "0.0.1"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
tracing = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
native_db = { workspace = true }
native_model = { workspace = true }

# Agent dependencies (screen capture & simulated input, via rustdesk's libs)
scrap = { git = "https://github.com/rustdesk/rustdesk", optional = true, features = [
  "linux-pkg-config",
  "wayland",
] }
enigo = { git = "https://github.com/rustdesk/rustdesk", optional = true }
sandpolis-agent = { path = "../sandpolis-agent", version = "0.0.1", optional = true }
tokio = { workspace = true, optional = true }
zstd = { version = "0.13", optional = true }
image = { workspace = true, optional = true }

# Client dependencies
bevy = { workspace = true, optional = true }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }
inventory = { workspace = true, optional = true }
serde_cbor = { workspace = true, optional = true }

# Terminal (TUI/CLI) dependencies, excluded on Android
[target.'cfg(not(target_os = "android"))'.dependencies]
ratatui = { workspace = true, optional = true }
ratatui-image = { workspace = true, optional = true }

[features]
agent = [
  "dep:scrap",
  "dep:enigo",
  "dep:sandpolis-agent",
  "dep:tokio",
  "dep:zstd",
  "dep:image",
  "dep:inventory",
]
# Client stream requesters decode frames (zstd + color modes) and screenshots
# (PNG), so they need the same codec deps as the agent encoder.
client = [
  "dep:zstd",
  "dep:image",
  "dep:tokio",
  "dep:serde_cbor",
  "dep:bevy",
  "dep:inventory",
  "dep:sandpolis-client",
  "dep:ratatui",
  "dep:ratatui-image",
  "dep:clap",
  "sandpolis-client/client",
]
server = []

[dev-dependencies]
serde_cbor = { workspace = true }
