[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-filesystem"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
fuser = { version = "0.15.1", optional = true, features = ["serializable"] }
notify = { version = "8.0.0", optional = true }
tracing = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }
ratatui = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
color-eyre = { version = "0.6.3", optional = true }

# GUI dependencies
bevy = { workspace = true, optional = true }
bevy_egui = { workspace = true, optional = true }
egui-file-dialog = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }

[features]
agent = ["dep:notify"]
client = ["dep:fuser"]
client-gui = [
  "client",
  "dep:bevy",
  "dep:bevy_egui",
  "dep:egui-file-dialog",
  "dep:inventory",
  "dep:sandpolis-client",
  "sandpolis-client/client-gui",
]
client-tui = [
  "client",
  "dep:ratatui",
  "dep:sandpolis-client",
  "dep:chrono",
  "dep:tokio",
  "dep:color-eyre",
  "sandpolis-client/client-tui",
]
server = []

[[example]]
name = "client_tui"
required-features = ["client-tui"]
