[package]
description = "Virtual estate monitoring & management!"
edition = "2024"
license = "Unlicense"
name = "sandpolis-filesystem"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
fuser = { version = "0.17.0", optional = true, features = ["serializable"] }
notify = { version = "8.0.0", optional = true }
tracing = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance", version = "0.0.1" }
sandpolis-macros = { path = "../sandpolis-macros", version = "0.0.1" }
sandpolis-client = { path = "../sandpolis-client", version = "0.0.1", optional = true }
chrono = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# GUI dependencies
bevy = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }

# Terminal (TUI/CLI) dependencies, excluded on Android
[target.'cfg(not(target_os = "android"))'.dependencies]
ratatui = { workspace = true, optional = true }
color-eyre = { version = "0.6.3", optional = true }

[features]
agent = ["dep:notify"]
client = [
  "dep:fuser",
  "dep:bevy",
  "dep:inventory",
  "dep:sandpolis-client",
  "dep:ratatui",
  "dep:chrono",
  "dep:tokio",
  "dep:color-eyre",
  "sandpolis-client/client",
]
server = []

[[example]]
name = "client_tui"
required-features = ["client"]
