[package]
name = "sandpolis-group"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
pem = { workspace = true }
rcgen = { version = "0.13.1", optional = true, features = [
  "crypto",
  "pem",
  "x509-parser",
] }
x509-parser = { version = "0.16.0", optional = true }
rustls-pki-types = { version = "1.10.1", optional = true }
validator = { workspace = true }
regex = { workspace = true }

[features]
server = ["dep:rcgen", "dep:rustls-pki-types", "dep:x509-parser"]
