[package]
name = "sandpolis-group"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
futures-util = { workspace = true }
time = { workspace = true }
tokio-rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }
pem = { workspace = true }
rcgen = { version = "0.13.1", optional = true, features = [
  "crypto",
  "pem",
  "x509-parser",
] }
x509-parser = { version = "0.16.0" }
rustls-pki-types = { version = "1.10.1", optional = true }
validator = { workspace = true }
regex = { workspace = true }
sandpolis-instance = { path = "../sandpolis-instance" }
sandpolis-database = { path = "../sandpolis-database" }

[dev-dependencies]
# Used to test certificate authentication with a different backend
openssl = "0.10.71"

[features]
server = ["dep:rcgen", "dep:rustls-pki-types"]
